fix weird look on tablet

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -411,7 +411,7 @@ $port-marg-vert: $pad;
   }
 
   &__image {
-    width: 16em;
+    width: 15em;
     flex-grow: 1;
     box-shadow: 0 1em 4em transparentize(black, 0.6);
     transition: transform 150ms ease-out;
